--- a/src/app/routes/dashboard/dashboard.component.html
+++ b/src/app/routes/dashboard/dashboard.component.html
@@ -1,1 +1,5 @@
-<p>dashboard works!</p>
+<h1>Rozpis směn</h1>
+<ul>
+<li><a [routerLink]="'/app/employee'">Zaměstnanci</a></li>
+<li><a [routerLink]="'/month'">Měsíční přehled</a></li>
+</ul>
