--- a/src/app/routes/app/employee/employee-list/employee-list.component.html
+++ b/src/app/routes/app/employee/employee-list/employee-list.component.html
@@ -1,3 +1,4 @@
+<h2>Zaměstnanci</h2>
 <table mat-table [dataSource]="dataSource.items" class="mat-elevation-z8">
 
   <!--- Note that these columns can be defined in any order.
